# slurmomatic

./: README.md  pyproject.toml
docs/: index.html  search.js  slurmify.html
src/autoslurm/: __init__.py  core.py
src/slurmify/: core.py
src/slurmomatic/: __init__.py  _hpo.py  core.py  hpo.py  ml.py  model_selection.py
tests/: test_autoslurm.py  test_core.py  test_hpo.py  test_model_selection.py  test_utils.py
