[project]
name = "slurmify"
version = "0.1.0"
description = "custom decorator to turn any function slurm-deployable. Can submit multiple jobs and multiple job_arrays"
readme = "README.md"
authors = [
    { name = "eric wang", email = "ehjwang@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "submitit>=1.5.2",
]

[project.scripts]
slurmify = "slurmify:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pdoc>=15.0.1",
    "slurmify",
]

[tool.uv.sources]
slurmify = { workspace = true }

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]